--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,10 +3,11 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="addUserText">برای مشاهده دوستان خود روی نقشه می بایست آنها نیز عضو برنامه ما باشند و شما با وارد کردن شماره آنها و ارسال درخواست به آنها می توانید اجازه داشته باشید موقعیت مکانی آنها را ببینید</string>
+    <string name="addUserText">برای مشاهده شخص مورد نظر خود که در مامَپ عضو می باشد کافیست شماره او را وارد کرده و درخواست خود را به او ارسال کنید ، تا پس تائید ایشان امکان مشاهده او را داشته باشید</string>
     <string name="logo_desc">توضیح</string>
     <string name="error_gif">x or y bound size should be at least %1$dpx and file size should be no more than %2$sM</string>
     <string name="ContactUsDesc">در صورت نیاز به برقراری ارتباط می توانید سوالات ،انتقادات و پیشنهادات خود را از طریق فرم زیر به دست ما برسانید. منتظر انتقادات و پیشنهادات شما هستیم.</string>
+    <string name="location_updated">Location Updated!!!!</string>
 
     <plurals name="error_over_count">
         <item quantity="one">شما فقط می توانید یک تصویر انتخاب کنید</item>
